--- a/meiduo_mall/static/user_center_info.html
+++ b/meiduo_mall/static/user_center_info.html
@@ -65,8 +65,8 @@
 				<div class="info_con clearfix">
 					<h3 class="common_title2">基本信息</h3>
 					<ul class="user_info_list">
-						<li><span>用户名：</span>张山</li>
-						<li><span>联系方式：</span>18500001111</li>
+						<li><span>用户名：</span>{{ username }}</li>
+						<li><span>联系方式：</span>{{ mobile }}</li>
 						<li>
 	                    <span>Email：</span>
 	                    <input type="text" name="email" class="email">
